--- a/revalida-shopping-app/src/app/modules/admin/pages/products/products.component.html
+++ b/revalida-shopping-app/src/app/modules/admin/pages/products/products.component.html
@@ -2,7 +2,8 @@
     <app-admin-topnav></app-admin-topnav>
     <div id="layoutSidenav">
         <div id="layoutSidenav_nav">
-            <app-admin-sidenav  [sidebarToggleInput]="sideToggleBtn" [adminSidenavInput]="adminSection"></app-admin-sidenav>
+            <app-admin-sidenav></app-admin-sidenav>
+            <!-- <app-admin-sidenav  [sidebarToggleInput]="sideToggleBtn" [adminSidenavInput]="adminSection"></app-admin-sidenav> -->
         </div>
         <div id="layoutSidenav_content">
             <main>
@@ -102,7 +103,8 @@
                     </div>
                   </div>                
             </main>
+            <app-admin-footer></app-admin-footer>
         </div>
     </div>
-    <app-footer></app-footer>
+    <!-- <app-footer></app-footer> -->
 </section>
