Fixed bug on accounts table data overpassing container

--- a/revalida-shopping-app/src/app/modules/admin/pages/accounts/accounts.component.html
+++ b/revalida-shopping-app/src/app/modules/admin/pages/accounts/accounts.component.html
@@ -24,13 +24,13 @@
                                     <th>Username</th>
                                     <th>Is Admin</th>
                                     <th>Email</th>
-                                    <th>Mobile Number</th>
+                                    <th>Mobile #</th>
                                     <th>Password</th>
                                     <th>Actions</th>
                                 </tr>
                                 </thead>
                                 <tbody>
-                                    <!-- <tr *ngFor="let account of accountsList$ | async">
+                                    <tr *ngFor="let account of accountsList$ | async">
                                         <td>{{account.first_name}}</td>
                                         <td>{{account.last_name}}</td>
                                         <td>{{account.username}}</td>
@@ -46,7 +46,7 @@
                                             <i class="fa fa-trash"></i> 
                                             </button>
                                         </td>
-                                    </tr>                            -->
+                                    </tr>                           
                                 </tbody>
                             </table>
                         </div>
