Added display for current logged in admin

--- a/revalida-shopping-app/src/app/modules/dashboard/pages/profile/profile.component.html
+++ b/revalida-shopping-app/src/app/modules/dashboard/pages/profile/profile.component.html
@@ -15,7 +15,7 @@
           <div class="side-menu">
             <div class="text-center mb-4">
               <img
-                src="https://via.placeholder.com/50"
+                src="assets/img/default_profile_img-50.png"
                 class="rounded-circle"
                 alt="User Avatar"
               />
@@ -40,7 +40,7 @@
               <li>
                 <a href="#" class="nav-link">
                   <i class="bi bi-cart"></i>
-                  My Purchase
+                  My Purchases
                 </a>
               </li>
               <li>
@@ -206,7 +206,7 @@
 
               <div class="profile-image">
                 <img
-                  src="https://via.placeholder.com/100"
+                  src="assets/img/default_profile_img-100.png"
                   alt="Profile Image"
                 />
                 <br />
