--- a/revalida-shopping-app/src/app/modules/admin/pages/admin-dashboard/admin-dashboard.component.html
+++ b/revalida-shopping-app/src/app/modules/admin/pages/admin-dashboard/admin-dashboard.component.html
@@ -5,7 +5,7 @@
     <div id="layoutSidenav">
         <div id="layoutSidenav_nav">
             <!-- Side Nav -->
-             <app-admin-sidenav></app-admin-sidenav>
+             <app-admin-sidenav [adminName]="adminName"></app-admin-sidenav>
         <!-- <app-admin-sidenav  [sidebarToggleInput]="sideToggleBtn" [adminSidenavInput]="adminSection"></app-admin-sidenav> -->
         </div>
         <div id="layoutSidenav_content">
