--- a/revalida-shopping-app/src/app/shared/components/admin-sidenav/admin-sidenav.component.html
+++ b/revalida-shopping-app/src/app/shared/components/admin-sidenav/admin-sidenav.component.html
@@ -77,6 +77,7 @@
     </div>
     <div class="sb-sidenav-footer">
         <div class="small">Logged in as:</div>
-        Juriel Botoy
+        <!-- Juriel Botoy -->
+        {{adminName}}
     </div>
 </nav>
