--- a/revalida-shopping-app/src/app/shared/components/footer/footer.component.html
+++ b/revalida-shopping-app/src/app/shared/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="py-3 bg-dark">
     <div class="container">
       <p class="m-0 text-center text-white">
-        Copyright &copy; Click&Get Convenince Store
+        Copyright &copy; Click&Get Online Convenience Store 2024
       </p>
     </div>
 </footer>
