--- a/revalida-shopping-app/src/app/modules/admin/pages/products/products.component.html
+++ b/revalida-shopping-app/src/app/modules/admin/pages/products/products.component.html
@@ -10,7 +10,222 @@
                 <div id="myProductsTable" class="me-5">
 
                 </div>
-                <div class="card mb-4" id="cardTable">
+                <div class="table-container">
+                  <div class="table-responsive">
+                    <div class="table-wrapper">
+                      <div class="table-title">
+                        <div class="row">
+                          <div class="col-sm-6">
+                            <h2>Manage <b>Products</b></h2>
+                          </div>
+                          <div class="col-sm-6">
+                            <a href="" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addProductModal"><i class="material-icons">&#xE147;</i> <span>Add New Product</span></a>
+                            <a href="" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteProductModal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>						
+                          </div>
+                        </div>
+                      </div>
+                      <table class="table table-striped table-hover">
+                        <thead>
+                          <tr>
+                            <th>
+                              <span class="custom-checkbox">
+                                <input type="checkbox" id="selectAll">
+                                <label for="selectAll"></label>
+                              </span>
+                            </th>
+                            <th>Item Image</th>
+                            <th>Item Name</th>
+                            <th>Category</th>
+                            <th>Quantity</th>
+                            <th>Unit Price</th>
+                            <th>Actions</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr *ngFor="let product of productsList$ | async">
+                            <td>
+                              <span class="custom-checkbox">
+                                <input type="checkbox" id="checkbox1" name="options[]" value="1">
+                                <label for="checkbox1"></label>
+                              </span>
+                            </td>
+                            <td><img src="assets/img/{{product.item_img}}" class="table-item-img" alt=""></td>
+                            <td>{{product.item_name}}</td>
+                            <td>{{product.category}}</td>
+                            <td>{{product.quantity}}</td>
+                            <td>{{product.unit_price}}</td>
+                            <td>
+                              <a href="#editProductModal" class="edit" data-bs-toggle="modal"><i class="material-icons" data-bs-toggle="tooltip" title="Edit">&#xE254;</i></a>
+                              <a href="#deleteProductModal" class="delete" data-bs-toggle="modal"><i class="material-icons" data-bs-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                            </td>
+                        </tr>     
+                        </tbody>
+                      </table>
+                      <div class="clearfix">
+                        <div class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>
+                        <ul class="pagination">
+                          <li class="page-item disabled"><a href="#">Previous</a></li>
+                          <li class="page-item"><a href="#" class="page-link">1</a></li>
+                          <li class="page-item"><a href="#" class="page-link">2</a></li>
+                          <li class="page-item active"><a href="#" class="page-link">3</a></li>
+                          <li class="page-item"><a href="#" class="page-link">4</a></li>
+                          <li class="page-item"><a href="#" class="page-link">5</a></li>
+                          <li class="page-item"><a href="#" class="page-link">Next</a></li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>        
+                </div>
+                <!-- Edit Modal HTML -->
+                <div id="addProductModal" class="modal fade">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <form>
+                        <div class="modal-header">						
+                          <h4 class="modal-title">Add Product</h4>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"></button>
+                        </div>
+                        <div class="modal-body">					
+                          <div class="item-img">
+                            <img src="assets/img/default_item_img.jpg" alt="">
+                          </div>
+                          <div class="mb-3">
+                              <label for="item-img-input" class="form-label">Item Image</label>
+                              <input
+                                type="file"
+                                class="form-control"
+                                id="item-img-input"
+                                formControlName=""
+                                placeholder="Choose an image"
+                              />
+                            </div>
+                          <div class="mb-3">
+                            <label for="username" class="form-label">Item Name</label>
+                            <input
+                              type="text"
+                              class="form-control"
+                              id="username"
+                              formControlName="username"
+                              placeholder="Type your user name"
+                            />
+                          </div>
+                          <div class="item-qty-price form-group">
+                              <div class="mb-3">
+                                  <label for="quantity" class="form-label">Quantity</label>
+                                  <input
+                                    type="number"
+                                    class="form-control"
+                                    formControlName=""
+                                    id="quantity"
+                                    placeholder="Input quantity"
+                                  />
+                              </div>
+                              <div class="mb-3">
+                                  <label for="unit-price" class="form-label">Unit Price</label>
+                                  <input
+                                    type="number"
+                                    class="form-control"
+                                    formControlName=""
+                                    id="unit-price"
+                                    placeholder="Input price"
+                                  />
+                              </div>
+                          </div>
+                        </div>
+                        <div class="modal-footer">
+                          <input type="button" class="btn btn-default" data-bs-dismiss="modal" value="Cancel">
+                          <input type="submit" class="btn btn-success" value="Add">
+                        </div>
+                      </form>
+                    </div>
+                  </div>
+                </div>
+                <!-- Edit Modal HTML -->
+                <div id="editProductModal" class="modal fade">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <form>
+                        <div class="modal-header">						
+                          <h4 class="modal-title">Edit Product</h4>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"></button>
+                        </div>
+                        <div class="modal-body">					
+                          <div class="item-img">
+                            <img src="assets/img/default_item_img.jpg" alt="">
+                          </div>
+                          <div class="mb-3">
+                              <label for="item-img-input" class="form-label">Item Image</label>
+                              <input
+                                type="file"
+                                class="form-control"
+                                id="item-img-input"
+                                formControlName=""
+                                placeholder="Choose an image"
+                              />
+                            </div>
+                          <div class="mb-3">
+                            <label for="username" class="form-label">Item Name</label>
+                            <input
+                              type="text"
+                              class="form-control"
+                              id="username"
+                              formControlName="username"
+                              placeholder="Type your user name"
+                            />
+                          </div>
+                          <div class="item-qty-price form-group">
+                              <div class="mb-3">
+                                  <label for="quantity" class="form-label">Quantity</label>
+                                  <input
+                                    type="number"
+                                    class="form-control"
+                                    formControlName=""
+                                    id="quantity"
+                                    placeholder="Input quantity"
+                                  />
+                              </div>
+                              <div class="mb-3">
+                                  <label for="unit-price" class="form-label">Unit Price</label>
+                                  <input
+                                    type="number"
+                                    class="form-control"
+                                    formControlName=""
+                                    id="unit-price"
+                                    placeholder="Input price"
+                                  />
+                              </div>
+                          </div>				
+                        </div>
+                        <div class="modal-footer">
+                          <input type="button" class="btn btn-default" data-bs-dismiss="modal" value="Cancel">
+                          <input type="submit" class="btn btn-info" value="Save">
+                        </div>
+                      </form>
+                    </div>
+                  </div>
+                </div>
+                <!-- Delete Modal HTML -->
+                <div id="deleteProductModal" class="modal fade">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <form>
+                        <div class="modal-header">						
+                          <h4 class="modal-title">Delete Product</h4>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"></button>
+                        </div>
+                        <div class="modal-body">					
+                          <p>Are you sure you want to delete these Records?</p>
+                          <p class="text-warning"><small>This action cannot be undone.</small></p>
+                        </div>
+                        <div class="modal-footer">
+                          <input type="button" class="btn btn-default" data-bs-dismiss="modal" value="Cancel">
+                          <input type="submit" class="btn btn-danger" value="Delete">
+                        </div>
+                      </form>
+                    </div>
+                  </div>
+                </div>
+                <!-- <div class="card mb-4" id="cardTable">
                     <div class="card-header">
                         <i class="fas fa-table me-1"></i>
                         Store Products
@@ -48,8 +263,8 @@
                             </table>
                         </div>
                     </div>
-                </div>
-                <div class="form-wrapper">
+                </div> -->
+                <div class="form-wrapper" >
                     <div class="form-container">
                       <h3 class="text-center">Item Details</h3>
                       <form enctype="multipart/form-data">
