Added update, and deleted selected operations on products table

--- a/revalida-shopping-app/src/app/modules/admin/pages/accounts/accounts.component.html
+++ b/revalida-shopping-app/src/app/modules/admin/pages/accounts/accounts.component.html
@@ -2,7 +2,7 @@
     <app-admin-topnav></app-admin-topnav>
     <div id="layoutSidenav">
         <div id="layoutSidenav_nav">
-            <app-admin-sidenav></app-admin-sidenav>
+            <app-admin-sidenav [adminName]="adminName"></app-admin-sidenav>
             <!-- <app-admin-sidenav  [sidebarToggleInput]="sideToggleBtn" [adminSidenavInput]="adminSection"></app-admin-sidenav> -->
         </div>
         <div id="layoutSidenav_content">
