--- a/revalida-shopping-app/src/app/modules/admin/pages/products/products.component.html
+++ b/revalida-shopping-app/src/app/modules/admin/pages/products/products.component.html
@@ -2,7 +2,7 @@
   <app-admin-topnav></app-admin-topnav>
   <div id="layoutSidenav">
     <div id="layoutSidenav_nav">
-      <app-admin-sidenav></app-admin-sidenav>
+      <app-admin-sidenav [adminName]="adminName"></app-admin-sidenav>
       <!-- <app-admin-sidenav  [sidebarToggleInput]="sideToggleBtn" [adminSidenavInput]="adminSection"></app-admin-sidenav> -->
     </div>
     <div id="layoutSidenav_content">
@@ -27,9 +27,10 @@
                     >
                     <a
                       href=""
+                      (click)="changeDeleteDesc()"
                       class="btn btn-danger"
                       data-bs-toggle="modal"
-                      data-bs-target="#deleteProductModal"
+                      data-bs-target="#deleteSelectedProductModal"
                       ><i class="material-icons">&#xE15C;</i>
                       <span>Delete</span></a
                     >
@@ -57,9 +58,6 @@
                   <tr
                     *ngFor="let product of productsList$ | async; let i = index"
                   >
-                    {{
-                      i
-                    }}
                     <td>
                       <span class="custom-checkbox">
                         <input
@@ -67,6 +65,7 @@
                           id="checkbox1"
                           name="options[]"
                           value="{{ i }}"
+                          (change)="onCheck(i)"
                         />
                         <label for="checkbox1"></label>
                       </span>
@@ -84,6 +83,7 @@
                     <td>{{ product.unit_price }}</td>
                     <td>
                       <a
+                        (click)="populateEditForm(i)"
                         href="#editProductModal"
                         class="edit"
                         data-bs-toggle="modal"
@@ -95,10 +95,10 @@
                         ></a
                       >
                       <a
+                        (click)="getIndex(i)"
                         href="#deleteProductModal"
                         class="delete"
                         data-bs-toggle="modal"
-                        (click)="getIndex(i)"
                         ><i
                           class="material-icons"
                           data-bs-toggle="tooltip"
@@ -139,6 +139,7 @@
                 <div class="modal-header">
                   <h4 class="modal-title">Add Product</h4>
                   <button
+                    #closeModalAdd
                     type="button"
                     class="btn-close"
                     data-bs-dismiss="modal"
@@ -156,12 +157,13 @@
                       type="file"
                       class="form-control"
                       [ngClass]="{
-                        'is-invalid': submitted && f['item_img'].errors
+                        'is-invalid': submitted && !f['item_img'].value
                       }"
                       id="item-img-input"
                       (change)="uploadFile($event)"
                       formControlName="item_img"
                       placeholder="Choose an image"
+                      accept="image/*"
                     />
                     <small
                       *ngIf="f['item_img'].invalid && submitted"
@@ -277,10 +279,11 @@
         <div id="editProductModal" class="modal fade">
           <div class="modal-dialog">
             <div class="modal-content">
-              <form [formGroup]="productForm">
+              <form [formGroup]="productForm" (ngSubmit)="onSubmitEdit(productIndex)">
                 <div class="modal-header">
                   <h4 class="modal-title">Edit Product</h4>
                   <button
+                    #closeModalEdit
                     type="button"
                     class="btn-close"
                     data-bs-dismiss="modal"
@@ -288,7 +291,7 @@
                 </div>
                 <div class="modal-body">
                   <div class="item-img">
-                    <img src="assets/img/default_item_img.jpg" alt="" />
+                    <img src="assets/img/{{ itemImgValue }}" alt="" />
                   </div>
                   <div class="mb-3">
                     <label for="item-img-input" class="form-label"
@@ -297,25 +300,45 @@
                     <input
                       type="file"
                       class="form-control"
-                      id="item-img-input"
+                      id="item-img-input-edit"
+                      (change)="uploadFile($event)"
                       formControlName="item_img"
                       placeholder="Choose an image"
+                      accept="image/*"
                     />
+                    <!-- <small
+                      *ngIf="f['item_img'].invalid && submitted"
+                      class="invalid-feedback"
+                    >
+                      <div *ngIf="f['item_img'].errors?.['required']">
+                        Item image is required
+                      </div>
+                    </small> -->
                   </div>
                   <div class="mb-3">
                     <label for="item_name" class="form-label">Item Name</label>
                     <input
                       type="text"
                       class="form-control"
+                      [ngClass]="{'is-invalid': submitted && f['item_name'].errors }"
                       id="item_name"
                       formControlName="item_name"
                       placeholder="Enter the item name"
                     />
+                    <small
+                      *ngIf="f['item_name'].invalid && submitted"
+                      class="invalid-feedback"
+                    >
+                      <div *ngIf="f['item_name'].errors?.['required']">
+                        Item name is required
+                      </div>
+                    </small>
                   </div>
                   <div class="mb-3">
                     <label for="category" class="form-label">Category</label>
                     <select
                       class="form-select"
+                      [ngClass]="{ 'is-invalid': submitted && (f['category'].value === 'Select category')}"
                       formControlName="category"
                       aria-label="Default select example"
                       id="category"
@@ -328,6 +351,12 @@
                         {{ category }}
                       </option>
                     </select>
+                    <small
+                      *ngIf="(f['category'].value === 'Select category') && submitted"
+                      class="invalid-feedback"
+                    >
+                      Category is required
+                    </small>
                   </div>
                   <div class="item-qty-price form-group">
                     <div class="mb-3">
@@ -335,10 +364,19 @@
                       <input
                         type="number"
                         class="form-control"
+                        [ngClass]="{'is-invalid': submitted && f['quantity'].errors }"
                         formControlName="quantity"
                         id="quantity"
                         placeholder="Input quantity"
                       />
+                      <small
+                      *ngIf="f['quantity'].invalid && submitted"
+                      class="invalid-feedback"
+                    >
+                      <div *ngIf="f['quantity'].errors?.['required']">
+                        Quantity is required
+                      </div>
+                    </small>
                     </div>
                     <div class="mb-3">
                       <label for="unit-price" class="form-label"
@@ -347,10 +385,19 @@
                       <input
                         type="number"
                         class="form-control"
+                        [ngClass]="{'is-invalid': submitted && f['unit_price'].errors }"
                         formControlName="unit_price"
                         id="unit-price"
                         placeholder="Input price"
                       />
+                      <small
+                        *ngIf="f['unit_price'].invalid && submitted"
+                        class="invalid-feedback"
+                      >
+                      <div *ngIf="f['unit_price'].errors?.['required']">
+                        Unit price is required
+                      </div>
+                    </small>
                     </div>
                   </div>
                 </div>
@@ -375,13 +422,47 @@
                 <div class="modal-header">
                   <h4 class="modal-title">Delete Product</h4>
                   <button
+                    #closeModalDelete
                     type="button"
                     class="btn-close"
                     data-bs-dismiss="modal"
                   ></button>
                 </div>
                 <div class="modal-body">
-                  <p>Are you sure you want to delete these Records?</p>
+                  <p>Are you sure you want to remove the product <strong>{{deleteDescription}}</strong>?</p>
+                  <p class="text-warning">
+                    <small>This action cannot be undone.</small>
+                  </p>
+                </div>
+                <div class="modal-footer">
+                  <input
+                    type="button"
+                    class="btn btn-default"
+                    data-bs-dismiss="modal"
+                    value="Cancel"
+                  />
+                  <input type="submit" class="btn btn-danger" value="Delete" />
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+        <!-- Delete Selected Modal HTML -->
+        <div id="deleteSelectedProductModal" class="modal fade">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <form [formGroup]="productForm" (ngSubmit)="onSubmitDeleteSelected()">
+                <div class="modal-header">
+                  <h4 class="modal-title">Delete Selected Product</h4>
+                  <button
+                    #closeModalDeleteSel
+                    type="button"
+                    class="btn-close"
+                    data-bs-dismiss="modal"
+                  ></button>
+                </div>
+                <div class="modal-body">
+                  <p>Are you sure you want to remove these products?</p>
                   <p class="text-warning">
                     <small>This action cannot be undone.</small>
                   </p>
