--- a/revalida-shopping-app/src/styles.scss
+++ b/revalida-shopping-app/src/styles.scss
@@ -1,10 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 // @import url("https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css");
-@import url("https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css");
+// @import url("https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css");
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
+@import "bootstrap/dist/css/bootstrap.min.css";
 // @import "~simple-datatables/dist/style.css";
 
 
