--- a/revalida-shopping-app/src/app/shared/components/admin-sidenav/admin-sidenav.component.html
+++ b/revalida-shopping-app/src/app/shared/components/admin-sidenav/admin-sidenav.component.html
@@ -17,7 +17,7 @@
                 <div class="sb-nav-link-icon"><i class="fa-solid fa-truck-fast"></i></div>
                 Orders
             </a>
-            <a class="nav-link" routerLink="/admin/accounts">
+            <a class="nav-link" routerLink="/admin/users">
             <!-- <a class="nav-link" (click)="redirectTo('/admin/accounts')"> -->
                 <div class="sb-nav-link-icon"><i class="fa-solid fa-user-gear"></i></div>
                 Admin
