--- a/revalida-shopping-app/src/app/modules/admin/pages/accounts/accounts.component.html
+++ b/revalida-shopping-app/src/app/modules/admin/pages/accounts/accounts.component.html
@@ -53,13 +53,15 @@
                               <td>{{account.first_name}}</td>
                               <td>{{account.last_name}}</td>
                               <td>{{account.username}}</td>
-                              <td>{{account.deactivated}}</td>
+                              <td>
+                                <small class="badge bg-{{account.deactivated? 'danger' : 'success' }}">{{account.deactivated? 'Deactivated' : 'Active' }}</small>
+                              </td>
                               <td>{{account.email}}</td>
                               <td>{{account.mobile_num}}</td>
                               <td>{{account.password}}</td>
                               <td>
                                 <a href="#editUserModal" (click)="populateEditForm(i)" class="edit" data-bs-toggle="modal"><i class="material-icons" data-bs-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                                <a href="#deactivateUserModal" (click)="getIndex(i)" class="delete" data-bs-toggle="modal"><i class="fa-solid fa-user-large-slash" data-bs-toggle="tooltip" title="Deactivate"></i></a>
+                                <a href="#deactivateUserModal" (click)="getIndex(i)" class="{{account.deactivated? 'activate' : 'delete'}}" data-bs-toggle="modal"><i class="fa-solid fa-{{account.deactivated? 'circle-check' : 'circle-xmark'}}" data-bs-toggle="tooltip" title="{{account.deactivated? 'Activate' : 'Deactivate'}}"></i></a>
                               </td>
                           </tr>     
                           </tbody>
