Added pagination in orders table

--- a/revalida-shopping-app/src/app/modules/admin/pages/orders/orders.component.scss
+++ b/revalida-shopping-app/src/app/modules/admin/pages/orders/orders.component.scss
@@ -556,7 +556,7 @@ body {
 	font-size: 24px;
 }
 .show-entries select.form-select {        
-	width: 60px;
+	width: 70px;
 	margin: 0 5px;
 }
 .table-filter .filter-right {
@@ -731,22 +731,26 @@ table.table tr th, table.table tr td {
 	float: right;
 	margin: 0 0 5px;
 }
-.pagination li a {
+.pagination li a,
+.pagination li button {
 	border: none;
 	font-size: 13px;
 	min-width: 30px;
 	min-height: 30px;
-	color: #999;
+	color: #5e5e5e;
 	margin: 0 2px;
 	line-height: 30px;
 	border-radius: 2px !important;
 	text-align: center;
 	padding: 0 6px;
 }
-.pagination li a:hover {
-	color: #666;
+.pagination li a:hover,
+.pagination li button:hover {
+	color: #353434;
 }	
-.pagination li.active a {
+.pagination li.active a,
+.pagination li.active button {
+  color: #5e5e5e;
 	background: #03A9F4;
 }
 .pagination li.active a:hover {        
